--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 
 <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="style.css">
+    <script type="module" src="app.js"></script>
     <title>Ecmrz</title>
 </head>
 
@@ -23,207 +26,16 @@
         </div>
     </header>
     <main class="main">
-        <div class="prdcts">
-            <ul class="products">
-                <li class="product">
-                    <div class="single-product">
-                        <div class="pr-img">
-                            <img src="images/mango.jpg" alt="">
-                        </div>
-                        <div class="details">
-                            <a class="title" href="">GopalVog</a>
-                            <a class="Origin" href="">Rajshahi</a>
-                            <a class="Price" href="">120$</a>
-                        </div>
-                        <div class="order">
-                            <a href=""> <button>Order Now</button></a>
-                        </div>
-                    </div>
 
-                </li>
-                <li class="product">
-                    <div class="single-product">
-                        <div class="pr-img">
-                            <img src="images/mango.jpg" alt="">
-                        </div>
-                        <div class="details">
-                            <a class="title" href="">GopalVog</a>
-                            <a class="Origin" href="">Rajshahi</a>
-                            <a class="Price" href="">120$</a>
-                        </div>
-                        <div class="order">
-                            <a href=""> <button>Order Now</button></a>
-                        </div>
-                    </div>
-
-                </li>
-                <li class="product">
-                    <div class="single-product">
-                        <div class="pr-img">
-                            <img src="images/mango.jpg" alt="">
-                        </div>
-                        <div class="details">
-                            <a class="title" href="">GopalVog</a>
-                            <a class="Origin" href="">Rajshahi</a>
-                            <a class="Price" href="">120$</a>
-                        </div>
-                        <div class="order">
-                            <a href=""> <button>Order Now</button></a>
-                        </div>
-                    </div>
-
-                </li>
-                <li class="product">
-                    <div class="single-product">
-                        <div class="pr-img">
-                            <img src="images/mango.jpg" alt="">
-                        </div>
-                        <div class="details">
-                            <a class="title" href="">GopalVog</a>
-                            <a class="Origin" href="">Rajshahi</a>
-                            <a class="Price" href="">120$</a>
-                        </div>
-                        <div class="order">
-                            <a href=""> <button>Order Now</button></a>
-                        </div>
-                    </div>
-
-                </li>
-                <li class="product">
-                    <div class="single-product">
-                        <div class="pr-img">
-                            <img src="images/mango.jpg" alt="">
-                        </div>
-                        <div class="details">
-                            <a class="title" href="">GopalVog</a>
-                            <a class="Origin" href="">Rajshahi</a>
-                            <a class="Price" href="">120$</a>
-                        </div>
-                        <div class="order">
-                            <a href=""> <button>Order Now</button></a>
-                        </div>
-                    </div>
-
-                </li>
-                <li class="product">
-                    <div class="single-product">
-                        <div class="pr-img">
-                            <img src="images/mango.jpg" alt="">
-                        </div>
-                        <div class="details">
-                            <a class="title" href="">GopalVog</a>
-                            <a class="Origin" href="">Rajshahi</a>
-                            <a class="Price" href="">120$</a>
-                        </div>
-                        <div class="order">
-                            <a href=""> <button>Order Now</button></a>
-                        </div>
-                    </div>
-
-                </li>
-                <li class="product">
-                    <div class="single-product">
-                        <div class="pr-img">
-                            <img src="images/mango.jpg" alt="">
-                        </div>
-                        <div class="details">
-                            <a class="title" href="">GopalVog</a>
-                            <a class="Origin" href="">Rajshahi</a>
-                            <a class="Price" href="">120$</a>
-                        </div>
-                        <div class="order">
-                            <a href=""> <button>Order Now</button></a>
-                        </div>
-                    </div>
-
-                </li>
-                <li class="product">
-                    <div class="single-product">
-                        <div class="pr-img">
-                            <img src="images/mango.jpg" alt="">
-                        </div>
-                        <div class="details">
-                            <a class="title" href="">GopalVog</a>
-                            <a class="Origin" href="">Rajshahi</a>
-                            <a class="Price" href="">120$</a>
-                        </div>
-                        <div class="order">
-                            <a href=""> <button>Order Now</button></a>
-                        </div>
-                    </div>
-
-                </li>
-                <li class="product">
-                    <div class="single-product">
-                        <div class="pr-img">
-                            <img src="images/mango.jpg" alt="">
-                        </div>
-                        <div class="details">
-                            <a class="title" href="">GopalVog</a>
-                            <a class="Origin" href="">Rajshahi</a>
-                            <a class="Price" href="">120$</a>
-                        </div>
-                        <div class="order">
-                            <a href=""> <button>Order Now</button></a>
-                        </div>
-                    </div>
-
-                </li>
-                <li class="product">
-                    <div class="single-product">
-                        <div class="pr-img">
-                            <img src="images/mango.jpg" alt="">
-                        </div>
-                        <div class="details">
-                            <a class="title" href="">GopalVog</a>
-                            <a class="Origin" href="">Rajshahi</a>
-                            <a class="Price" href="">120$</a>
-                        </div>
-                        <div class="order">
-                            <a href=""> <button>Order Now</button></a>
-                        </div>
-                    </div>
-
-                </li>
-                <li class="product">
-                    <div class="single-product">
-                        <div class="pr-img">
-                            <img src="images/mango.jpg" alt="">
-                        </div>
-                        <div class="details">
-                            <a class="title" href="">GopalVog</a>
-                            <a class="Origin" href="">Rajshahi</a>
-                            <a class="Price" href="">120$</a>
-                        </div>
-                        <div class="order">
-                            <a href=""> <button>Order Now</button></a>
-                        </div>
-                    </div>
-
-                </li>
-                <li class="product">
-                    <div class="single-product">
-                        <div class="pr-img">
-                            <img src="images/mango.jpg" alt="">
-                        </div>
-                        <div class="details">
-                            <a class="title" href="">GopalVog</a>
-                            <a class="Origin" href="">Rajshahi</a>
-                            <a class="Price" href="">120$</a>
-                        </div>
-                        <div class="order">
-                            <a href=""> <button>Order Now</button></a>
-                        </div>
-                    </div>
-
-                </li>
-            </ul>
-        </div>
 
     </main>
     <footer>
         <div class="ftr">Copy Right @2023</div>
     </footer>
+
+
+
+
 </body>
 
 </html>
